--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container-team">
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
@@ -36,7 +36,7 @@
         </div>
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
@@ -48,7 +48,7 @@
         </div>
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
@@ -60,7 +60,7 @@
         </div>
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
@@ -72,7 +72,7 @@
         </div>
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
@@ -84,7 +84,7 @@
         </div>
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
@@ -96,7 +96,7 @@
         </div>
         <div class="team-box-layout2">
             <div class="item-img">
-                <img src="./team5.png" alt="Team Member">
+                <img src="https://dingarq.com/media/team/0454_Hgz2iri.jpg" alt="Team Member">
             </div>
             <div class="item-content">
                 <div class="item-heading">
